--- a/styles/style.css
+++ b/styles/style.css
@@ -170,10 +170,12 @@ a{
     color: white;
     padding-left: 80px;
     font-size: 80px;
+    height: 100%;
 }
 
 .why-us-text p{
     color: white;
     font-size: 30px;
     padding-right: 20px;
+    height: 100%;
 }
