--- a/styles/style.css
+++ b/styles/style.css
@@ -171,11 +171,12 @@ a{
     padding-left: 80px;
     font-size: 80px;
     height: 100%;
+    margin: 0%;
 }
 
 .why-us-text p{
     color: white;
-    font-size: 30px;
-    padding-right: 20px;
+    font-size: 20px;
+    padding-right: 30px;
     height: 100%;
 }
